risolto bug2